# alert-aggregation-service

./: .env  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yaml  pyproject.toml
deploy/helm/alerts-aggregation-tool/: Chart.yaml  values.yaml
deploy/helm/alerts-aggregation-tool/templates/: cm.yaml  deployment.yaml  ingress.yaml  svc.yaml
deploy/kustomize/base/: deployment.yaml  ingress.yaml  kustomization.yaml  svc.yaml
deploy/kustomize/overlays/stage/: kustomization.yaml
src/: __main__.py
src/alert_aggregation_service/: create_app.py  docs.py  settings.py
src/alert_aggregation_service/api/: app_status.py
src/alert_aggregation_service/api/v1/alert/: alert.py  models.py
