[tool.poetry]
name = "alert-aggregation-service"
version = "0.1.0"
description = ""
authors = ["1ndef1n1te"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
aiofiles = "^24.1.0"
aiohttp = "^3.9.5"
requests = "^2.32.3"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
